# Music

./: .gitignore  README.md
.github/workflows/: cargo_audit.yaml  ci.yaml
backend/ml/: Cargo.toml  TODO.md  dataset.json  pyproject.toml
backend/ml/utils/: judge.py  lora.py  prep_dataset.py  test_model.py
backend/musixmatch/: Cargo.toml
backend/musixmatch/src/: keyword_search.rs  lib.rs  main.rs
backend/spotify/: Cargo.toml
backend/spotify/src/: lib.rs  main.rs
