[tool.poetry]
name = "ml"
version = "0.1.0"
description = "Fine Tuning SLM's"
authors = ["ok3ks <freelanceokeks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pydantic = "^2.12.4"
pydantic-ai = "^1.20.0"
asyncio = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
