[package]
name = "webscraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.2"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
needless_borrow = "deny"
match_single_binding = "deny"

