[package]
name = "webscraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
cargo-audit = "0.22.0"
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.2"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
seekstorm = "1.2.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.49.0"
