[package]
name = "spotify"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures-util = "0.3.31"
ran = "2.0.1"
rand = "0.9.2"
rspotify = { version="0.15.1", features = ["env-file", "cli"] }
rspotify-model = "0.15.1"
tokio = { version= "1.47.1", features = ["full"] }
webscraping = { path = "../musixmatch" }
